fix: `p.links` shifting

--- a/numbat-wasm/www/main.css
+++ b/numbat-wasm/www/main.css
@@ -33,6 +33,7 @@ p.desc {
 
 p.links {
     font-size: 0.8em;
+    margin-top: 36px;
     text-align: center;
 }
 
@@ -45,7 +46,6 @@ p.links a {
   background: linear-gradient(90deg, #f0f0f0 25%, #e0e0e0 50%, #f0f0f0 75%);
   background-size: 200% 100%;
   height: 550px;
-  margin-bottom: 2em;
   width: 100%;
 }
 @keyframes skeleton-loading {
@@ -79,7 +79,6 @@ p.links a {
 .terminal,
 .terminal .terminal-fill {
     padding: 1.2em;
-    margin-bottom: 2em;
 }
 
 .terminal,
